_sass/modules/_footer.scss
.footer {
  margin: 0 auto;
  max-width: 38em;
  -webkit-animation-fill-mode: both;
          animation-fill-mode: both;
  -webkit-animation-name: fadeInUpBig;
          animation-name: fadeInUpBig;
  -webkit-animation-duration: 0.5s;
          animation-duration: 0.5s;
  -webkit-animation-delay: 0.5s;
          animation-delay: 0.5s;

  @include respond-to('large-plus') {
    margin: 0 auto;
    max-width: 38em;
  }

  hr {
    border: none;
    width: 75%;
    height: 0.0625rem;
    margin: 1rem auto;
    background-color: $c-footer-border;

    @include respond-to('handheld-plus') {
      width: 100%;
    }
  }

  .colophon {
    font-size: 0.875em;
    color: $c-colophon-copy;

    a {
      &:link, &:visited, &:active, &:hover {
        color: $c-colophon-copy;
      }
    }
  }

  .copyright {
    font-size: 0.75em;
    color: $c-em-copy;

    a {
      &:link, &:visited, &:active, &:hover {
        color: $c-em-copy;
      }
    }
  }
}

